
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 APR 21a
  * in model/chem/_C2H4_Air_Plasma_36s/
    - added adamovich2023e.c
  * in model/chem/_C2H4_Air_Plasma_36s/chem.c
    - added calls to adamovich2023e
    

2023 APR 07a
  * in model/chem/_Air_Plasma_11s/parent2023.c
    - reverted to 23apr02a version
  * in model/chem/_Air_Plasma_11s/doc/report.tex
    - reverted to 23apr02a version
    

2023 APR 04a
  * in model/chem/_Air_Plasma_11s/parent2023.c
    - deleted reactions 26-28
    - changed reactions 24-25 to Park (1990) instead of BOLSIG
  * in model/chem/_Air_Plasma_11s/doc/report.tex
    - in Parent (2023) model, deleted reactions 26-28 and changed reactions 24-25 to Park (1990)
    

2023 APR 02a
  * changed C2H4AirPlasma30s to C2H4AirPlasma36s


2023 MAR 25a
  * in src/control.c
    - in readcontrol_actions(), added a call to find_metrics_on_all_nodes() after the Bdry()
      module is read to update the metrics of the symmetry nodes
  * in src/init.c
    - in reorder_initvar_species(), fixed bug related to the special case where "default" is the 
      last species specified in Init() and the number of species listed in Init() is equal to the
      number of species in the chemical solver
  

2023 MAR 22a
  * in model/emfield/_Epotential*/emfield.c
    - in write_bdry_emfield_template(), deleted the call to Faces() within the template (obsolete)
  * in model/fluid/_Navier-Stokes_plasma/fluid.c
    - in write_model_fluid_template() and read_model_fluid_actions(), added variable emissivity
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - added functions find_Srad() and find_dSrad_dU()
    - in find_Sstar(), added call to find_Srad()
    - in find_dSstar_dUstar(), added call to find_dSrad_dU()
  * in tools/equilairplasma.c