@@ -2707,45 +2707,46 @@ const static double Pa[SMAP_NS][3][11]=
    pos 2-8: a1,a2,...,a7
    pos 9-10: b1,b2
 */    
+
     {
       {
-       +200.0e0,         /* Tmin [K] */ 
-       +1000.0e0,        /* Tmax [K] */
-        0.0,
-        0.0,
-        2.03611116E+00,
-        1.46454151E-02,
-        -6.71077915E-06,
-        1.47222923E-09,
-        -1.25706061E-13,
-        1.26790000E+05,
-        1.03053693E+01
+       +200.000,        /* Tmin [K] */ 
+       +1000.00,        /* Tmax [K] */
+        0.00000000e+00, /* a1 */
+        0.00000000e+00, /* a2 */
+        3.95920148E+00, /* a3 */
+       -7.57052247E-03, /* a4 */
+        5.70990292E-05, /* a5 */
+       -6.91588753E-08, /* a6 */
+        2.69884373E-11, /* a7 */
+        1.26940000E+05, /* b1 */
+        4.09733096E+00  /* b2 */
       },
       {
-       +1000.0e0,            /* Tmin [K] */ 
-       +3500.0e0-dTrangemin, /* Tmax [K] */
-        0.0,
-        0.0,
-        3.95920148E+00,
-       -7.57052247E-03,
-        5.70990292E-05,
-       -6.91588753E-08,
-        2.69884373E-11,
-        1.26940000E+05,
-        4.09733096E+00
+       +1000.00,        /* Tmin [K] */ 
+       +(3500.000-dTrangemin),        /* Tmax [K] */
+        0.00000000e+00, /* a1 */
+        0.00000000e+00, /* a2 */
+        2.03611116E+00, /* a3 */
+        1.46454151E-02, /* a4 */
+       -6.71077915E-06, /* a5 */
+        1.47222923E-09, /* a6 */
+       -1.25706061E-13, /* a7 */
+        1.26790000E+05, /* b1 */
+        1.03053693E+01  /* b2 */        
       },
       {
-       +3500.0e0-dTrangemin,  /* Tmin [K] */
-       +3500.0e0,             /* Tmax [K] */
-        0.0,
-        0.0,
-        3.95920148E+00,
-       -7.57052247E-03,
-        5.70990292E-05,
-       -6.91588753E-08,
-        2.69884373E-11,
-        1.26940000E+05,
-        4.09733096E+00
+       +(3500.000-dTrangemin),        /* Tmin [K] */ 
+       +3500.000,       /* Tmax [K] */
+        0.00000000e+00, /* a1 */
+        0.00000000e+00, /* a2 */
+        2.03611116E+00, /* a3 */
+        1.46454151E-02, /* a4 */
+       -6.71077915E-06, /* a5 */
+        1.47222923E-09, /* a6 */
+       -1.25706061E-13, /* a7 */
+        1.26790000E+05, /* b1 */
+        1.03053693E+01  /* b2 */        
       }
     },
 
